--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -40,7 +40,7 @@
         <label for="image" class="form-label">Image URL</label>
         <input
           class="form-control"
-          name="listing[image]"
+          name="listing[image][url]"
           value="<%=listing.image.url%>"
           type="text"
           required
