--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,8 +1,9 @@
-<nav
-  class="navbar navbar-expand-md bg-body-tertiary border border-bottom sticky-top"
->
+<nav class="navbar navbar-expand-md bg-white border border-bottom sticky-top">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/"><i class="fa-regular fa-compass"></i></a>
+    <a class="navbar-brand" href="/listings">
+      <i class="fa-regular fa-compass"></i>
+      <span class="brand-text">RoamHub</span>
+    </a>
     <button
       class="navbar-toggler"
       type="button"
@@ -11,10 +12,10 @@
     >
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-link" aria-current="page" href="/">Home</a>
-        <a class="nav-link" href="/listings">All Listings</a>
+    <div class="collapse navbar-collapse bg-white p-2 rounded" id="navbarNavAltMarkup">
+      <div class="navbar-nav ms-auto">
+        <a class="nav-link" aria-current="page" href="/listings">Home</a>
+        <a class="nav-link" href="/listings">Find Your Perfect Stay</a>
         <a class="nav-link" href="/listings/new">Add new Listing</a>
       </div>
     </div>
