--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,6 +1,6 @@
 <% layout("/layouts/boilerplate") %>
 <body>
-  <h3>All Listings</h3>
+  <h3 class="hero-heading">Find Your Perfect Stay</h3>
   <!-- <form method="GET" action="/listings/new">
     <button>Create New Listing</button>
   </form> -->
@@ -18,10 +18,14 @@
         />
         <div class="card-img-overlay"></div>
         <div class="card-body">
-          <p class="card-text">
-            <b><%=listing.title %></b> <br />
-            &#8377;<%=listing.price?.toLocaleString("en-IN") || "Price not available" %> /night
-          </p>
+          <div class="card-text">
+            <div class="card-text-title">
+              <p><%=listing.title %></p>
+            </div>
+            <div class="card-text-price">
+              &#8377;<%=listing.price?.toLocaleString("en-IN") || "Price not available" %> /night
+            </div>
+          </div>
         </div>
       </div>
     </a>
