--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -10,7 +10,7 @@
   <div class="card col-6 offset-3 show-card">
     <img
       src="<%=listing.image.url %>"
-      class="card-img-top show-img"
+      class="card-img-top show-img card-image"
       alt="listing_image"
     />
     <div class="card-body">
